--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,10 @@
     <color name="gray">#808080</color>
     <color name="green">#42B883</color>
     <color name="darkyellow">#FFB300</color>
+    <!--Homepage-->
+    <color name="navbar_color">#F4F4F4</color>
+    <color name="active_icon_color">#FF5300</color>
+    <color name="active_text_color">#FF5300</color>
+    <color name="inactive_icon_color">#9E9E9E</color>
+    <color name="inactive_text_color">#9E9E9E</color>
 </resources>
